# DocsAI

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/auth/: dependencies.py
apps/api/app/clients/: openai_client.py  storage.py
apps/api/app/core/: db.py  logging.py  metrics.py  middleware.py  settings.py
apps/api/app/repositories/: documents.py
apps/api/app/schemas/: common.py  documents.py  metadata.py
apps/api/app/services/: chunking.py
apps/api/app/tasks/: celery_app.py  process_document.py
apps/api/app/utils/: errors.py  rate_limit.py
apps/web/: package.json
apps/web/app/: page.tsx
apps/web/lib/: api.ts  health-card.tsx
docs/api/: errors.md
docs/architecture/: evaluation-plan.md  security-and-compliance.md
docs/prompts/extraction/: v1.txt
docs/prompts/rag/: v1.txt
infra/scripts/: smoke-test.sh
supabase/migrations/: 20260309103000_init_docsai.sql
